monitoring/fuse-console/base/fuse-console-dc.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: fuse76-console
    component: fuse76-console
    group: console
    version: "1.6"
  name: fuse76-console
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: fuse76-console
    component: fuse76-console
    deploymentconfig: fuse76-console
    group: console
    version: "1.6"
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: fuse76-console
        component: fuse76-console
        deploymentconfig: fuse76-console
        group: console
        version: "1.6"
    spec:
      containers:
      - env:
        - name: HAWTIO_ONLINE_MODE
          value: cluster
        - name: HAWTIO_ONLINE_GATEWAY
          value: "true"
        - name: HAWTIO_OAUTH_CLIENT_ID
          value: fuse76-console-oauth-client
        - name: OPENSHIFT_CLUSTER_VERSION
          value: "4"
        image: registry.access.redhat.com/fuse7/fuse-console:1.6
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /online
            port: nginx
            scheme: HTTPS
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: fuse76-console
        ports:
        - containerPort: 8443
          name: nginx
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /online
            port: nginx
            scheme: HTTPS
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: "1"
            memory: 200Mi
          requests:
            cpu: 200m
            memory: 32Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /opt/app-root/src/online/hawtconfig.json
          name: fuse76-console-config
          subPath: hawtconfig.json
        - mountPath: /opt/app-root/src/integration/hawtconfig.json
          name: fuse76-console-config
          subPath: hawtconfig.json
        - mountPath: /etc/tls/private/serving
          name: fuse76-console-tls-serving
        - mountPath: /etc/tls/private/proxying
          name: fuse76-console-tls-proxying
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: fuse76-console-config
        name: fuse76-console-config
      - name: fuse76-console-tls-serving
        secret:
          defaultMode: 420
          secretName: fuse76-console-tls-serving
      - name: fuse76-console-tls-proxying
        secret:
          defaultMode: 420
          secretName: fuse76-console-tls-proxying
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - fuse76-console
      from:
        kind: ImageStreamTag
        name: fuse7-console:1.6
        namespace: openshift
    type: ImageChange
