monitoring/fuse-console/base/fuse-console-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
    service.alpha.openshift.io/serving-cert-secret-name: fuse76-console-tls-serving
    service.alpha.openshift.io/serving-cert-signed-by: openshift-service-serving-signer@1587759110
    service.beta.openshift.io/serving-cert-signed-by: openshift-service-serving-signer@1587759110
  creationTimestamp: "2020-04-27T22:03:07Z"
  labels:
    app: fuse76-console
    component: fuse76-console
    group: console
    version: "1.6"
  name: fuse76-console-service
  namespace: seating-monitoring
  resourceVersion: "825332"
  selfLink: /api/v1/namespaces/seating-monitoring/services/fuse76-console-service
  uid: f5051478-90e7-4377-826f-af1ab084ae4b
spec:
  clusterIP: 172.30.188.240
  ports:
  - port: 443
    protocol: TCP
    targetPort: nginx
  selector:
    app: fuse76-console
    component: fuse76-console
    group: console
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
